<resources>
    <string name="app_name">Core</string>
    <string name="Error_Conexion">Ocurrió un error al intentar hacer la conexión con los servicios,por favor intente más tarde</string>
    <string name="version_footer">
        Versión: %1$s
    </string>
    <string name="tu_solicitud_se_ha_enviado_correctamente">Tu solicitud se ha enviado correctamente</string>
    <string name="espera_la_autorizaci_n_de_tu_jefe">Espera la autorización de tu jefe.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_puntos_interes">action_puntos_interes</string>
    <string name="action_promociones">action_promociones</string>
    <string name="action_gafete">action_gafete</string>
    <string name="action_lugares">action_lugares</string>
    <string name="action_asistencias">action_asistencias</string>
    <array name="action_polizas">action_polizas</array>
    <string name="action_polizas">action_polizas</string>
    <string name="action_inicio">action_inicio</string>
    <string name="action_contactos">action_contactos</string>
    <string name="action_aventon">action_aventon</string>
    <string name="action_nomina">action_nomina</string>
    <string name="action_nomina_detail">action_nomina_detail</string>
    <string name="action_permiso">action_permiso</string>
    <string name="action_justificaciones">action_justificaciones</string>
    <string name="aceptar">Aceptar</string>
    <string name="action_horario">action_horario</string>
    <string name="justificaciones">Justificciones</string>
    <string name="action_sos">action_sos</string>
    <string name="action_horario_plantilla">action_horario_plantilla</string>
    <string name="server_error">Ha ocurrido un problema al realizar la petición. Intenta mas tarde.</string>
    <string name="otrasObservaciones">Otras Observaciones</string>
    <string name="mi_gafete">Mi Gafete</string>
    <string name="mis_asistencias">Asistencias</string>
    <string name="mis_permisos">Mis permisos</string>
    <string name="liberacion_nomina">Liberación de nómina</string>
    <string name="mis_horarios">Mis horarios</string>
    <string name="mis_justificaciones">Mis Justificaciones</string>
    <string name="mis_configuraciones">Mis configuraciones</string>
    <string name="puntos_interes">Puntos de interés</string>
    <string name="promociones_descuentos">Promociones y descuentos</string>
    <string name="mi_lugar_trabajo">Mi lugar de trabajo</string>
    <string name="aventones">Aventones</string>
    <string name="polizas">Mis pólizas</string>
    <string name="ficha_medica">Mi ficha médica</string>
    <string name="conf_contact">Configurar contactos de S.O.S</string>
    <string name="call_sos">Llamar al 911</string>
    <string name="inicio">Inicio</string>
    <string name="hora_calculada">Hora calculada</string>
    <string name="action_hora">action_hora</string>
    <string name="action_log">action_log</string>
    <string name="Aceptar">Añadir</string>
    <string name="atencion">Atención</string>
    <string name="borrara_configuracion">Esto borrará la configuración anterior de tus horarios</string>
    <string name="estas_de_acuerdo">¿Estás de acuerdo?</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">Ok</string>
    <string name="como_tu_horario">Como tu horario es variable, tus entradas y salidas debes registrarlas manualmente:</string>
    <string name="inicia_jornada">Inicia tu jornada laboral haciendo click aquí:</string>
    <string name="finaliza_jornada">Termina tu jornada laboral haciendo click aquí:</string>
    <string name="para_llegar">Para llegar a tu pantalla de Inicio y Fin de labores, puedes hacerlo desde el menú de Administración</string>
    <string name="presionaIniciar">Presiona para iniciar tu jornada</string>
    <string name="presionaTermina">Presiona para terminar tu jornada</string>
    <string name="asistencias">Asistencias</string>
    <string name="inicio_fin_labores">Entrada y salida</string>
    <string name="consulta_horario">Consulta de horario</string>
    <string name="action_jornada">action_jornada</string>
    <string name="action_911">action_911</string>
    <string name="configuraci_n">Configuración</string>
    <string name="notificaciones">notificaciones</string>
    <string name="idEmpleado">Socio: </string>
    <string name="borrar">borrar</string>
    <string name="action_cofiguraciones">action_cofiguraciones</string>
    <string name="action_buzon">action_buzon</string>

</resources>
